refactor: fase 1 e 2 - correcoes criticas, agenda completa e features microSaaS
- Downgrade Spring Boot 4.0.6 -> 3.4.6 LTS
- Adiciona flyway-core, actuator, springdoc-openapi 2.8.9
- Corrige pom.xml com todas as dependencias corretas

feat: AppointmentController/Service/Repository completos
- CRUD completo de agendamentos
- Endpoint de calendario por periodo (GET /appointments?startDate=&endDate=)
- Agenda do dia por barbeiro (GET /appointments/barber/{id}/day)
- Validacao de conflito de horario
- Transicoes de status (CONFIRMED -> IN_PROGRESS -> COMPLETED)
- duration_minutes configuravel por agendamento (padrao 30 min)
- Campo endTime calculado automaticamente

feat: ClientService + ClientController refatorados
- Toda logica movida do controller para o service
- Endpoint GET /clients/overdue - clientes sem retorno no prazo
- WhatsApp link gerado automaticamente no ClientResponseDTO
- Campo returnIntervalDays no cliente

feat: BarberService + BarberController refatorados
- Logica de criacao de User+Barber no service em transacao atomica

fix: AuthController
- POST /auth/register sempre cria ADMIN (dono de barbearia)
- GET /auth/me - retorna perfil do usuario logado

fix: TokenService.validateToken()
- Retorna null em token invalido em vez de lancar excecao

fix: OrderService.updateOrder()
- Recalcula itens e totalAmount corretamente

fix: SecurityConfigurations
- CORS externalizado para variavel de ambiente CORS_ALLOWED_ORIGINS
- Libera rotas Swagger e Actuator sem autenticacao
- Constructor injection

fix: Client.updateInfo()
- Inclui campo whatsapp e returnIntervalDays na atualizacao

fix: application.yml
- show-sql desativado
- Adiciona config de actuator e cors

migration: V2__add_microsaas_fields.sql
- return_interval_days nos clientes
- duration_minutes e service_id nos agendamentos